fixed flexbox align

--- a/style.scss
+++ b/style.scss
@@ -664,13 +664,13 @@ section {
       &:before{
         content:"";
         display: block;
-        width: 252px;
+        width: 33%;
         order:1;
       }
       &:after{
         content:"";
         display: block;
-        width: 252px;
+        width: 33%;
       }
       > li {
         width: 33%;
